fix modal issues on mobile

--- a/src/styles/GeneralComponents/modal.module.scss
+++ b/src/styles/GeneralComponents/modal.module.scss
@@ -99,7 +99,7 @@
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     left: 0;
     display: flex;
